# wifidog-gateway

./: CMakeLists.txt  configure.in  wifidog.conf
libhttpd/: Makefile.am  api.c  httpd.h  httpd_priv.h  protocol.c
src/: auth.c  client_list.h  conf.c  conf.h  debug.c  firewall.c  fw_iptables.c  gateway.c  http.c  httpd_thread.c  safe.c  safe.h  simple_http.c  simple_http.h  util.c  wdctl.c  wdctl.h  wdctl_thread.c
